# epubreader

./: .gitignore  CMakeLists.txt  Fundamental-Accessibility-Tests-Non-Visual-Reading-v2.0.1.epub  Reading-History-Navigation-Experimental-v1.0.0.epub
src/: main.cpp
src/js/: deno.json
src/js/test/: Fundamental-Accessibility-Tests-Read-Aloud-v2.0.0.epub
